--- a/web/css/lbd.css
+++ b/web/css/lbd.css
@@ -1,3 +1,11 @@
+html { height: 100% }
+body { height: 100%; margin: 0; padding: 0 }
+#map-canvas { height: 100% }
+
+div#map-pane {
+    width: 250px;    
+}
+
 .personData{
 	font-size: 50px;
 }
