--- a/web/views/map.htm
+++ b/web/views/map.htm
@@ -1,11 +1,11 @@
 <script type="text/javascript"
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2SrYqjWZ4SmYgPbrWjXQNadeqAPI3Tko&sensor=false">
+  src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC2SrYqjWZ4SmYgPbrWjXQNadeqAPI3Tko&sensor=false">
 </script>
 <script type="text/javascript">
   function initialize() {
     var mapOptions = {
       center: new google.maps.LatLng(4, 23),
-      zoom: 4   ,
+      zoom: 4,
       mapTypeId: google.maps.MapTypeId.ROADMAP
     };
     var map = new google.maps.Map(document.getElementById("map-canvas"),
