--- a/web/views/map.htm
+++ b/web/views/map.htm
@@ -18,7 +18,10 @@
     <div class="row">
         <div id="map-canvas" class="col-md-9"/>
         <div id="map-pane" class="col-md-3">
-                Pane
+              <input ng-model="markerLat" type="text"/>
+              <input ng-model="markerLng" type="text"/>
+              <button class="btn" ng-click="addMarker()">add</button>
+                
         </div>
     </div>
 </div>
