--- a/web/views/map.htm
+++ b/web/views/map.htm
@@ -1,22 +1,19 @@
-<script type="text/javascript"
-  src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC2SrYqjWZ4SmYgPbrWjXQNadeqAPI3Tko&sensor=false">
-</script>
 <script type="text/javascript">
-  function initialize() {
-    var mapOptions = {
-      center: new google.maps.LatLng(4, 23),
-      zoom: 4,
-      mapTypeId: google.maps.MapTypeId.ROADMAP
-    };
-    var map = new google.maps.Map(document.getElementById("map-canvas"),
-        mapOptions);
-  }
-  google.maps.event.addDomListener(window, 'load', initialize);
+  // function initialize() {
+  //   var mapOptions = {
+  //     center: new google.maps.LatLng(4, 23),
+  //     zoom: 4,
+  //     mapTypeId: google.maps.MapTypeId.ROADMAP
+  //   };
+  //   var map = new google.maps.Map(document.getElementById("map-canvas"),
+  //       mapOptions);
+  // }
+  // google.maps.event.addDomListener(window, 'load', initialize);
 </script>
 
 <div class="container">
     <div class="row">
-        <div id="map-canvas" class="col-md-9"/>
+        <google-map center="center" class="col-md-9" draggable="true" zoom="zoom" markers="markers" mark-click="true"></google-map>
         <div id="map-pane" class="col-md-3">
               <input ng-model="markerLat" type="text"/>
               <input ng-model="markerLng" type="text"/>
