--- a/web/css/lbd.css
+++ b/web/css/lbd.css
@@ -1,12 +1,20 @@
 google-map{
 	width: 100%;
-	height: 60em;
+	height: 60rem;
 }
 
 div#map-pane {
-    width: 250px;    
+    padding-left: 3rem;
 }
 
 .personData{
 	font-size: 50px;
+}
+
+#lbd-filter {
+    //height: 30rem;
+}
+
+#lbd-stats {
+    //height: 30rem;
 }
