--- a/web/views/map.htm
+++ b/web/views/map.htm
@@ -1,24 +1,74 @@
-<script type="text/javascript">
-  // function initialize() {
-  //   var mapOptions = {
-  //     center: new google.maps.LatLng(4, 23),
-  //     zoom: 4,
-  //     mapTypeId: google.maps.MapTypeId.ROADMAP
-  //   };
-  //   var map = new google.maps.Map(document.getElementById("map-canvas"),
-  //       mapOptions);
-  // }
-  // google.maps.event.addDomListener(window, 'load', initialize);
+    
+<script>
+    $(document).ready(function() { 
+        $(".filter-sympthoms").select2();
+    });
 </script>
 
 <div class="container">
     <div class="row">
-        <google-map center="center" class="col-md-9" draggable="true" zoom="zoom" markers="markers" mark-click="true"></google-map>
-        <div id="map-pane" class="col-md-3">
-              <input ng-model="markerLat" type="text"/>
-              <input ng-model="markerLng" type="text"/>
-              <button class="btn" ng-click="addMarker()">add</button>
-                
+        <google-map center="center" class="col-md-8" draggable="true" zoom="zoom" markers="markers" mark-click="true"></google-map>
+        <div id="map-pane" class="col-md-4">
+            <div id="lbd-filter" class="row">
+                <div class="panel panel-default">
+                  <div class="panel-heading">Filter</div>
+                  <div class="panel-body">
+                    <form class="form-horizontal" role="form">
+                      <div class="form-group">
+                        <label class="col-sm-4 control-label">Location</label>
+                        <div class="col-sm-4">
+                          <input type="text" placeholder="Source Latitude" style="width:100%;"/>
+                        </div>
+                        <div class="col-sm-4">
+                            <input type="text" placeholder="Source Longtitude" style="width:100%;"/>
+                        </div>  
+                      </div>
+                      <div class="form-group">
+                        <label class="col-sm-4 control-label"></label>
+                        <div class="col-sm-4">
+                          <input type="text" placeholder="Target Latitude" style="width:100%;"/>
+                        </div>
+                        <div class="col-sm-4">
+                            <input type="text" placeholder="Target Longtitude" style="width:100%;"/>
+                        </div>  
+                      </div>
+                      <div class="form-group">
+                        <label for="inputConditions" class="col-sm-4 control-label">Conditions</label>
+                        <div class="col-sm-8">
+                          <input id="inputConditions" type="text" class="form-control">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="inputSymthoms" class="col-sm-4 control-label">Symthoms</label>
+                        <div class="col-sm-8">
+                          <input id="inputSymthoms" type="text" class="form-control">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="inputAge" class="col-sm-4 control-label">Age</label>
+                        <div class="col-sm-8">
+                          <input id="inputAge" type="number" class="form-control">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <div class="col-sm-8"></div>
+                        <div class="col-sm-4">
+                          <button type="submit" style="width: 100%;">Search</button>
+                        </div>
+                      </div>
+                    </form>  
+                  </div>
+                </div>
+            </div>
+            <div id="lbd-stats" class="row">
+                <div class="panel panel-default">
+                  <div class="panel-heading">Statistics</div>
+                  <div class="panel-body">
+                    Panel content
+                  </div>
+                </div>
+            </div>            
         </div>
     </div>
 </div>
+
