--- a/web/views/map.htm
+++ b/web/views/map.htm
@@ -53,7 +53,7 @@
                       <div class="form-group">
                         <div class="col-sm-8"></div>
                         <div class="col-sm-4">
-                          <button type="submit" style="width: 100%;">Search</button>
+                          <button ng-click="addMarker()" type="submit" style="width: 100%;">Search</button>
                         </div>
                       </div>
                     </form>  
