--- a/web/views/map.htm
+++ b/web/views/map.htm
@@ -1,14 +1,8 @@
-    
-<script>
-    $(document).ready(function() { 
-        $(".filter-sympthoms").select2();
-    });
-</script>
-
+<div id="notifications" style="position: fixed;top: 30px; left: 50%; margin-left: -209px; z-index: 999;"></div>
 <div class="container">
     <div class="row">
         <google-map center="center" class="col-md-8" draggable="true" zoom="zoom" markers="markers" mark-click="true"></google-map>
-        <div id="map-pane" class="col-md-4">
+        <div id="map-pane" class="col-md-4" ng-init="init()">
             <div id="lbd-filter" class="row">
                 <div class="panel panel-default">
                   <div class="panel-heading">Filter</div>
@@ -17,31 +11,35 @@
                       <div class="form-group">
                         <label class="col-sm-4 control-label">Location</label>
                         <div class="col-sm-4">
-                          <input type="text" placeholder="Source Latitude" style="width:100%;"/>
+                          <input type="text" placeholder="Latitude 1" class="form-control" style="width:100%;"/>
                         </div>
                         <div class="col-sm-4">
-                            <input type="text" placeholder="Source Longtitude" style="width:100%;"/>
+                            <input type="text" placeholder="Longtitude 1" class="form-control" style="width:100%;"/>
                         </div>  
                       </div>
                       <div class="form-group">
                         <label class="col-sm-4 control-label"></label>
                         <div class="col-sm-4">
-                          <input type="text" placeholder="Target Latitude" style="width:100%;"/>
+                          <input type="text" placeholder="Latitude 2" class="form-control" style="width:100%;"/>
                         </div>
                         <div class="col-sm-4">
-                            <input type="text" placeholder="Target Longtitude" style="width:100%;"/>
+                            <input type="text" placeholder="Longtitude 2" class="form-control" style="width:100%;"/>
                         </div>  
                       </div>
                       <div class="form-group">
                         <label for="inputConditions" class="col-sm-4 control-label">Conditions</label>
                         <div class="col-sm-8">
-                          <input id="inputConditions" type="text" class="form-control">
+                          <select multiple id="inputConditions" class="form-control">
+                              <option ng-repeat="condition in conditions" value="{{condition.id}}">{{condtion.name}}</option>
+                          </select>
                         </div>
                       </div>
                       <div class="form-group">
-                        <label for="inputSymthoms" class="col-sm-4 control-label">Symthoms</label>
+                        <label for="inputSympthoms" class="col-sm-4 control-label">Symthoms</label>
                         <div class="col-sm-8">
-                          <input id="inputSymthoms" type="text" class="form-control">
+                          <select multiple id="inputSympthoms" class="form-control">
+                              <option ng-repeat="sympthom in sympthoms" value="{{sympthom.id}}">{{sympthom.name}}</option>
+                          </select>
                         </div>
                       </div>
                       <div class="form-group">
@@ -53,7 +51,7 @@
                       <div class="form-group">
                         <div class="col-sm-8"></div>
                         <div class="col-sm-4">
-                          <button ng-click="addMarker()" type="submit" style="width: 100%;">Search</button>
+                          <button ng-click="addMarker()" type="submit" style="width: 100%;" class="btn btn-primary">Search</button>
                         </div>
                       </div>
                     </form>  
@@ -64,7 +62,7 @@
                 <div class="panel panel-default">
                   <div class="panel-heading">Statistics</div>
                   <div class="panel-body">
-                    Panel content
+                    Statistics Panel
                   </div>
                 </div>
             </div>            
