--- a/web/views/map.htm
+++ b/web/views/map.htm
@@ -10,48 +10,32 @@
                     <form class="form-horizontal" role="form">
                       <div class="form-group">
                         <label class="col-sm-4 control-label">Location</label>
-                        <div class="col-sm-4">
-                          <input type="text" placeholder="Latitude 1" class="form-control" style="width:100%;"/>
+                        <div class="col-sm-8">
+                          <input type="text" ng-model="filter.location" placeholder="City, Country or State" class="form-control"/>
                         </div>
-                        <div class="col-sm-4">
-                            <input type="text" placeholder="Longtitude 1" class="form-control" style="width:100%;"/>
-                        </div>  
-                      </div>
-                      <div class="form-group">
-                        <label class="col-sm-4 control-label"></label>
-                        <div class="col-sm-4">
-                          <input type="text" placeholder="Latitude 2" class="form-control" style="width:100%;"/>
-                        </div>
-                        <div class="col-sm-4">
-                            <input type="text" placeholder="Longtitude 2" class="form-control" style="width:100%;"/>
-                        </div>  
                       </div>
                       <div class="form-group">
                         <label for="inputConditions" class="col-sm-4 control-label">Conditions</label>
                         <div class="col-sm-8">
-                          <select multiple id="inputConditions" class="form-control">
-                              <option ng-repeat="condition in conditions" value="{{condition.id}}">{{condtion.name}}</option>
-                          </select>
+                          <input type="text" class="form-control" ng-model="filter.condition" placeholder="Diseases..." typeahead="condition.name for condition in conditions | filter:$viewValue | limitTo:8">
                         </div>
                       </div>
                       <div class="form-group">
                         <label for="inputSympthoms" class="col-sm-4 control-label">Symthoms</label>
                         <div class="col-sm-8">
-                          <select multiple id="inputSympthoms" class="form-control">
-                              <option ng-repeat="sympthom in sympthoms" value="{{sympthom.id}}">{{sympthom.name}}</option>
-                          </select>
+                          <input type="text" class="form-control" ng-model="filter.sympthom" placeholder="Feaver, Headache..." typeahead="sympthom.name for sympthom in sympthoms | filter:$viewValue | limitTo:8">
                         </div>
                       </div>
                       <div class="form-group">
                         <label for="inputAge" class="col-sm-4 control-label">Age</label>
                         <div class="col-sm-8">
-                          <input id="inputAge" type="number" class="form-control">
+                          <input id="inputAge" ng-model="filter.age" type="number" class="form-control" />
                         </div>
                       </div>
                       <div class="form-group">
                         <div class="col-sm-8"></div>
                         <div class="col-sm-4">
-                          <button ng-click="addMarker()" type="submit" style="width: 100%;" class="btn btn-primary">Search</button>
+                          <button ng-click="addMarker()" type="submit" class="btn btn-primary">Search</button>
                         </div>
                       </div>
                     </form>  
@@ -69,4 +53,3 @@
         </div>
     </div>
 </div>
-
