--- a/web/views/map.htm
+++ b/web/views/map.htm
@@ -17,7 +17,7 @@
                       <div class="form-group">
                         <label for="inputConditions" class="col-sm-4 control-label">Conditions</label>
                         <div class="col-sm-8">
-                          <input type="text" class="form-control" ng-model="filter.condition" placeholder="Diseases..." typeahead="condition.name for condition in conditions | filter:$viewValue | limitTo:8">
+                          <input type="text" class="form-control" ng-model="filter.condition" placeholder="Diseases..." typeahead="condition for condition in conditions | filter:$viewValue | limitTo:8">
                         </div>
                       </div>
                       <div class="form-group">
@@ -28,8 +28,16 @@
                       </div>
                       <div class="form-group">
                         <label for="inputAge" class="col-sm-4 control-label">Age</label>
+                        <div class="col-sm-4">
+                          <input id="inputAge" ng-model="filter.ageStart" type="number" class="form-control" />
+<!--                           <input id="inputAge" ng-model="filter.ageEnd" type="number" class="form-control" /> -->
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="inputDates" class="col-sm-4 control-label">Between</label>
                         <div class="col-sm-8">
-                          <input id="inputAge" ng-model="filter.age" type="number" class="form-control" />
+                          <input id="inputDateStart" show-weeks="false" starting-day="1" datepicker-popup="dd-MMMM-yyyy" ng-model="filter.dateStart" class="form-control" />
+                          <input id="inputDateStart" show-weeks="false" starting-day="1" datepicker-popup="dd-MMMM-yyyy" ng-model="filter.dateEnd" class="form-control" />
                         </div>
                       </div>
                       <div class="form-group">
