--- a/web/views/map.htm
+++ b/web/views/map.htm
@@ -23,7 +23,7 @@
                       <div class="form-group">
                         <label for="inputSympthoms" class="col-sm-4 control-label">Symthoms</label>
                         <div class="col-sm-8">
-                          <input type="text" class="form-control" ng-model="filter.sympthom" placeholder="Feaver, Headache..." typeahead="sympthom.name for sympthom in sympthoms | filter:$viewValue | limitTo:8">
+                          <input type="text" class="form-control" ng-model="filter.sympthom" placeholder="Feaver, Headache..." typeahead="sympthom for sympthom in sympthoms | filter:$viewValue | limitTo:8">
                         </div>
                       </div>
                       <div class="form-group">
@@ -41,7 +41,10 @@
                         </div>
                       </div>
                       <div class="form-group">
-                        <div class="col-sm-8"></div>
+                        <div class="col-sm-offset-4 col-sm-4" />
+                          <button ng-click="clearMarkers()" class="btn btn-warning">Clear</button>
+                        </div>
+                        <div class="col-sm-4" />
                         <div class="col-sm-4">
                           <button ng-click="addMarker()" type="submit" class="btn btn-primary">Search</button>
                         </div>
