--- a/web/views/map.htm
+++ b/web/views/map.htm
@@ -41,10 +41,13 @@
                         </div>
                       </div>
                       <div class="form-group">
-                        <div class="col-sm-offset-4 col-sm-4" />
-                          <button ng-click="clearMarkers()" class="btn btn-warning">Clear</button>
+                        <div class="col-sm-4">
+                          <button ng-click="clearFields()" class="btn btn-info">Clear Fields</button>
                         </div>
                         <div class="col-sm-4" />
+                          <button ng-click="clearMarkers()" class="btn btn-warning">Clear markers</button>
+                        </div>
+                        <div class="col-sm-2" />
                         <div class="col-sm-4">
                           <button ng-click="addMarker()" type="submit" class="btn btn-primary">Search</button>
                         </div>
